--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -77,6 +77,31 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "63dee51c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ASDEX', 'AUG', 'AUGW', 'CMOD', 'COMPASS', 'D3D', 'JET', 'JETILW',\n",
+       "       'JFT2M', 'JT60U', 'MAST', 'NSTX', 'PBXM', 'PDX', 'START', 'T10',\n",
+       "       'TCV', 'TDEV', 'TEXTOR', 'TFTR', 'TUMAN3M'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB5[\"TOK\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a1c89920",
    "metadata": {
     "scrolled": false
@@ -439,7 +464,7 @@
        "[8351 rows x 231 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8c2518a1",
    "metadata": {},
    "outputs": [
@@ -468,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cde16799",
    "metadata": {
     "scrolled": false
@@ -734,7 +759,7 @@
        "[3474 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "84ba5ab0",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1034,7 @@
        "[2776 rows x 14 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1049,8 @@
    "metadata": {},
    "source": [
     "* Thermal energy confinement time: $\\tau_{E,th} = W_{th}/P_{l,th}$ [s]\n",
-    "    - Thermal stored energy: W_{th}\n",
+    "    - Thermal stored energy: $W_{th}$\n",
+    "* Intercept of the regression: $\\alpha_0$    \n",
     "* Plasma current: $I_P$ [MA]\n",
     "* Vacuum toroidal magnetic field: $B_t$ [T]\n",
     "* Central line-averaged electron density: $\\bar{n}_e$ [$\\cdot$10$^{19}$ m $^{-3}$] \n",
@@ -1044,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1f46b7d4",
    "metadata": {
     "scrolled": true
@@ -1107,7 +1133,7 @@
        "0  0.715733  0.432187  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8b2f23a0",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1300,7 @@
        "4 -0.608794  0.383715  0.184350  1.99391  0.715278  0.431757       1534   5  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cd9ce044",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1323,7 @@
        "Index(['α0', 'αI', 'αB', 'αP', 'αn', 'αM', 'αR', 'αe', 'αk'], dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d47b275d",
    "metadata": {},
    "outputs": [],
@@ -1340,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e255ccb7",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "72a2a4df",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1397,7 @@
        "array(['AUG', 'AUGW', 'JET', 'JETILW'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6112e2fa",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1420,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "c009c749",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1441,7 @@
        "array(['AUG', 'AUGW', 'JET', 'JETILW'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
