--- a/OLS.ipynb
+++ b/OLS.ipynb
@@ -87,88 +87,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-2.378171</td>\n",
-       "      <td>0.001998</td>\n",
-       "      <td>0.737164</td>\n",
-       "      <td>2.294855</td>\n",
-       "      <td>1.515786</td>\n",
-       "      <td>0.500169</td>\n",
-       "      <td>0.491191</td>\n",
-       "      <td>-1.202761</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>AUG</td>\n",
-       "      <td>6483</td>\n",
-       "      <td>19950518</td>\n",
-       "      <td>4.000</td>\n",
-       "      <td>1515</td>\n",
+       "      <td>-2.975930</td>\n",
+       "      <td>-1.217734</td>\n",
+       "      <td>0.790728</td>\n",
+       "      <td>1.332102</td>\n",
+       "      <td>0.625938</td>\n",
+       "      <td>0.527093</td>\n",
+       "      <td>-0.025523</td>\n",
+       "      <td>-1.418447</td>\n",
+       "      <td>0.405465</td>\n",
+       "      <td>ASDEX</td>\n",
+       "      <td>5980</td>\n",
+       "      <td>19820622</td>\n",
+       "      <td>1.205</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-2.254748</td>\n",
-       "      <td>-0.002303</td>\n",
-       "      <td>0.915891</td>\n",
-       "      <td>1.904642</td>\n",
-       "      <td>1.525839</td>\n",
-       "      <td>0.499562</td>\n",
-       "      <td>0.487890</td>\n",
-       "      <td>-1.210263</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>AUG</td>\n",
-       "      <td>7555</td>\n",
-       "      <td>19960223</td>\n",
-       "      <td>2.498</td>\n",
-       "      <td>1529</td>\n",
+       "      <td>-3.015527</td>\n",
+       "      <td>-1.220102</td>\n",
+       "      <td>0.790728</td>\n",
+       "      <td>1.317480</td>\n",
+       "      <td>0.705076</td>\n",
+       "      <td>0.521172</td>\n",
+       "      <td>-0.027988</td>\n",
+       "      <td>-1.409604</td>\n",
+       "      <td>0.405465</td>\n",
+       "      <td>ASDEX</td>\n",
+       "      <td>5980</td>\n",
+       "      <td>19820622</td>\n",
+       "      <td>1.224</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-2.546186</td>\n",
-       "      <td>-0.228030</td>\n",
-       "      <td>0.749055</td>\n",
-       "      <td>1.835138</td>\n",
-       "      <td>1.521481</td>\n",
-       "      <td>0.498955</td>\n",
-       "      <td>0.480396</td>\n",
-       "      <td>-1.184928</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>AUG</td>\n",
-       "      <td>7634</td>\n",
-       "      <td>19960301</td>\n",
-       "      <td>3.499</td>\n",
-       "      <td>1532</td>\n",
+       "      <td>-2.752786</td>\n",
+       "      <td>-1.213686</td>\n",
+       "      <td>0.790728</td>\n",
+       "      <td>1.226712</td>\n",
+       "      <td>0.123986</td>\n",
+       "      <td>0.526502</td>\n",
+       "      <td>-0.010556</td>\n",
+       "      <td>-1.432100</td>\n",
+       "      <td>0.405465</td>\n",
+       "      <td>ASDEX</td>\n",
+       "      <td>5982</td>\n",
+       "      <td>19820622</td>\n",
+       "      <td>1.188</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-2.486628</td>\n",
-       "      <td>-0.226273</td>\n",
-       "      <td>0.701115</td>\n",
-       "      <td>1.852384</td>\n",
-       "      <td>1.527143</td>\n",
-       "      <td>0.500169</td>\n",
-       "      <td>0.484045</td>\n",
-       "      <td>-1.189324</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>AUG</td>\n",
-       "      <td>7639</td>\n",
-       "      <td>19960301</td>\n",
-       "      <td>3.500</td>\n",
-       "      <td>1533</td>\n",
+       "      <td>-2.660547</td>\n",
+       "      <td>-1.217734</td>\n",
+       "      <td>0.790728</td>\n",
+       "      <td>1.328400</td>\n",
+       "      <td>0.319181</td>\n",
+       "      <td>0.526502</td>\n",
+       "      <td>-0.025933</td>\n",
+       "      <td>-1.417369</td>\n",
+       "      <td>0.405465</td>\n",
+       "      <td>ASDEX</td>\n",
+       "      <td>5982</td>\n",
+       "      <td>19820622</td>\n",
+       "      <td>1.216</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-2.511949</td>\n",
-       "      <td>-0.228156</td>\n",
-       "      <td>0.701611</td>\n",
-       "      <td>1.853482</td>\n",
-       "      <td>1.554348</td>\n",
-       "      <td>0.500169</td>\n",
-       "      <td>0.482850</td>\n",
-       "      <td>-1.188727</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>AUG</td>\n",
-       "      <td>7640</td>\n",
-       "      <td>19960301</td>\n",
-       "      <td>3.501</td>\n",
-       "      <td>1534</td>\n",
+       "      <td>-2.965979</td>\n",
+       "      <td>-1.223495</td>\n",
+       "      <td>0.790274</td>\n",
+       "      <td>1.347294</td>\n",
+       "      <td>0.709513</td>\n",
+       "      <td>0.521766</td>\n",
+       "      <td>-0.031387</td>\n",
+       "      <td>-1.406800</td>\n",
+       "      <td>0.405465</td>\n",
+       "      <td>ASDEX</td>\n",
+       "      <td>5982</td>\n",
+       "      <td>19820622</td>\n",
+       "      <td>1.244</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,18 +176,18 @@
       ],
       "text/plain": [
        "      TAUTH        IP        BT       NEL      PLTH      RGEO     KAREA  \\\n",
-       "0 -2.378171  0.001998  0.737164  2.294855  1.515786  0.500169  0.491191   \n",
-       "1 -2.254748 -0.002303  0.915891  1.904642  1.525839  0.499562  0.487890   \n",
-       "2 -2.546186 -0.228030  0.749055  1.835138  1.521481  0.498955  0.480396   \n",
-       "3 -2.486628 -0.226273  0.701115  1.852384  1.527143  0.500169  0.484045   \n",
-       "4 -2.511949 -0.228156  0.701611  1.853482  1.554348  0.500169  0.482850   \n",
+       "0 -2.975930 -1.217734  0.790728  1.332102  0.625938  0.527093 -0.025523   \n",
+       "1 -3.015527 -1.220102  0.790728  1.317480  0.705076  0.521172 -0.027988   \n",
+       "2 -2.752786 -1.213686  0.790728  1.226712  0.123986  0.526502 -0.010556   \n",
+       "3 -2.660547 -1.217734  0.790728  1.328400  0.319181  0.526502 -0.025933   \n",
+       "4 -2.965979 -1.223495  0.790274  1.347294  0.709513  0.521766 -0.031387   \n",
        "\n",
-       "        EPS      MEFF  TOK  SHOT      DATE   TIME   ind  \n",
-       "0 -1.202761  0.693147  AUG  6483  19950518  4.000  1515  \n",
-       "1 -1.210263  0.693147  AUG  7555  19960223  2.498  1529  \n",
-       "2 -1.184928  0.693147  AUG  7634  19960301  3.499  1532  \n",
-       "3 -1.189324  0.693147  AUG  7639  19960301  3.500  1533  \n",
-       "4 -1.188727  0.693147  AUG  7640  19960301  3.501  1534  "
+       "        EPS      MEFF    TOK  SHOT      DATE   TIME  ind  \n",
+       "0 -1.418447  0.405465  ASDEX  5980  19820622  1.205    6  \n",
+       "1 -1.409604  0.405465  ASDEX  5980  19820622  1.224    7  \n",
+       "2 -1.432100  0.405465  ASDEX  5982  19820622  1.188   12  \n",
+       "3 -1.417369  0.405465  ASDEX  5982  19820622  1.216   13  \n",
+       "4 -1.406800  0.405465  ASDEX  5982  19820622  1.244   14  "
       ]
      },
      "execution_count": 3,
@@ -196,21 +196,32 @@
     }
    ],
    "source": [
-    "r = pd.read_csv(\"data/R.csv\") # logarithmic data \n",
-    "r.head()"
+    "data = pd.read_csv(\"data/O.csv\") # logarithmic data \n",
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "07104093",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Removing the spherical TOKAMAKS\n",
+    "#data = data[~data.TOK.isin(['MAST', 'NSTX'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2a8c0148",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = r.TAUTH.values\n",
+    "y = data.TAUTH.values\n",
     "X = (\n",
-    "    r.IP.values, r.BT.values, r.NEL.values, r.PLTH.values, \n",
-    "    r.RGEO.values, r.KAREA.values, r.EPS.values, r.MEFF.values\n",
+    "    data.IP.values, data.BT.values, data.NEL.values, data.PLTH.values, \n",
+    "    data.RGEO.values, data.KAREA.values, data.EPS.values, data.MEFF.values\n",
     ")"
    ]
   },
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e8378edb",
    "metadata": {},
    "outputs": [],
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b175301d",
    "metadata": {},
    "outputs": [
@@ -297,7 +308,7 @@
        "0  0.715733  0.432187  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6c1ec9cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03759822711978881"
+       "0.07116439643743085"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,18 +342,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ee118063",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.55162488, -0.22349474,  0.07325017, -0.73538245,  0.89097562,\n",
-       "        0.2366993 , -1.30103608,  0.22162034])"
+       "array([ 0.77017136,  0.2385164 ,  0.38381842, -0.60880113,  1.9942594 ,\n",
+       "        0.43218689,  0.7157326 ,  0.18443849])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7af9eb2d",
    "metadata": {},
    "outputs": [
@@ -395,42 +406,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>IP</td>\n",
-       "      <td>1.551625</td>\n",
+       "      <td>0.770171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BT</td>\n",
-       "      <td>-0.223495</td>\n",
+       "      <td>0.238516</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NEL</td>\n",
-       "      <td>0.073250</td>\n",
+       "      <td>0.383818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>PLTH</td>\n",
-       "      <td>-0.735382</td>\n",
+       "      <td>-0.608801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>RGEO</td>\n",
-       "      <td>0.890976</td>\n",
+       "      <td>1.994259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>KAREA</td>\n",
-       "      <td>0.236699</td>\n",
+       "      <td>0.432187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>EPS</td>\n",
-       "      <td>-1.301036</td>\n",
+       "      <td>0.715733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>MEFF</td>\n",
-       "      <td>0.221620</td>\n",
+       "      <td>0.184438</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -438,17 +449,17 @@
       ],
       "text/plain": [
        "  Attribute  Coefficient\n",
-       "0        IP     1.551625\n",
-       "1        BT    -0.223495\n",
-       "2       NEL     0.073250\n",
-       "3      PLTH    -0.735382\n",
-       "4      RGEO     0.890976\n",
-       "5     KAREA     0.236699\n",
-       "6       EPS    -1.301036\n",
-       "7      MEFF     0.221620"
+       "0        IP     0.770171\n",
+       "1        BT     0.238516\n",
+       "2       NEL     0.383818\n",
+       "3      PLTH    -0.608801\n",
+       "4      RGEO     1.994259\n",
+       "5     KAREA     0.432187\n",
+       "6       EPS     0.715733\n",
+       "7      MEFF     0.184438"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,8 +467,8 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "y = r[[\"TAUTH\"]]\n",
-    "X = r[r.columns[1:9]]\n",
+    "y = data[[\"TAUTH\"]]\n",
+    "X = data[data.columns[1:9]]\n",
     "\n",
     "regressor = LinearRegression()\n",
     "regressor.fit(X,y)\n",
@@ -470,17 +481,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "84ec4068",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.03759823])"
+       "array([0.0711644])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,8 +502,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f623d22f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>α0</th>\n",
+       "      <th>αI</th>\n",
+       "      <th>αB</th>\n",
+       "      <th>αP</th>\n",
+       "      <th>αn</th>\n",
+       "      <th>αM</th>\n",
+       "      <th>αR</th>\n",
+       "      <th>αe</th>\n",
+       "      <th>αk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.105675</td>\n",
+       "      <td>0.770171</td>\n",
+       "      <td>0.238516</td>\n",
+       "      <td>-0.608801</td>\n",
+       "      <td>0.383818</td>\n",
+       "      <td>0.184438</td>\n",
+       "      <td>1.99426</td>\n",
+       "      <td>0.715733</td>\n",
+       "      <td>0.432187</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         α0        αI        αB        αP        αn        αM       αR  \\\n",
+       "0  0.105675  0.770171  0.238516 -0.608801  0.383818  0.184438  1.99426   \n",
+       "\n",
+       "         αe        αk  \n",
+       "0  0.715733  0.432187  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81f87a91",
    "metadata": {},
    "outputs": [],
    "source": []
