--- a/OLS.ipynb
+++ b/OLS.ipynb
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "07104093",
+   "id": "f5518ed7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,9 +573,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82ed5ceb",
+   "metadata": {},
+   "source": [
+    "## OLS to DB5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0d3b5d6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = pd.read_csv(\"data/O.csv\") # logarithmic data \n",
+    "r = pd.read_csv(\"data/R.csv\") # logarithmic data \n",
+    "\n",
+    "data = pd.concat([o, r], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e302a5ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Attribute</th>\n",
+       "      <th>Coefficient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IP</td>\n",
+       "      <td>1.132719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BT</td>\n",
+       "      <td>0.073328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NEL</td>\n",
+       "      <td>0.174598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PLTH</td>\n",
+       "      <td>-0.682693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RGEO</td>\n",
+       "      <td>1.447047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KAREA</td>\n",
+       "      <td>0.287424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>EPS</td>\n",
+       "      <td>0.060115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>MEFF</td>\n",
+       "      <td>0.217685</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Attribute  Coefficient\n",
+       "0        IP     1.132719\n",
+       "1        BT     0.073328\n",
+       "2       NEL     0.174598\n",
+       "3      PLTH    -0.682693\n",
+       "4      RGEO     1.447047\n",
+       "5     KAREA     0.287424\n",
+       "6       EPS     0.060115\n",
+       "7      MEFF     0.217685"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "y = data[[\"TAUTH\"]]\n",
+    "X = data[data.columns[1:9]]\n",
+    "\n",
+    "## Removing the spherical TOKAMAKS\n",
+    "data = data[~data.TOK.isin(['MAST', 'NSTX'])]\n",
+    "\n",
+    "regressor = LinearRegression()\n",
+    "regressor.fit(X,y)\n",
+    "\n",
+    "v = pd.DataFrame(regressor.coef_, index=[\"Coefficient\"]).transpose()\n",
+    "w = pd.DataFrame(X.columns, columns=[\"Attribute\"])\n",
+    "coeff_df = pd.concat([w,v], axis=1, join=\"inner\")\n",
+    "coeff_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ec49586d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.07996745])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(regressor.intercept_)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f87a91",
+   "id": "52d26ebd",
    "metadata": {},
    "outputs": [],
    "source": []
