fixed error on masking for influential points in all notebooks. Also, I created the R_ids_alpha... to further investigate an optimized subset

--- a/First_Part/Cornerstone_Optimization.ipynb
+++ b/First_Part/Cornerstone_Optimization.ipynb
@@ -31,18 +31,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB2P8 = pd.read_csv(\"data/DB2P8.csv\")\n",
-    "DB5 = pd.read_csv(\"data/DB5.csv\")\n",
+    "DB2P8 = pd.read_csv(\"../data/DB2P8.csv\")\n",
+    "DB5 = pd.read_csv(\"../data/DB5.csv\")\n",
     "\n",
     "DB2P8 = DB2P8[DB5.columns]\n",
     "DB2 = DB2P8[[\"TAUTH\"] + coeffs].apply(np.abs).apply(np.log)\n",
     "DB2[\"id\"] = DB2P8[\"id\"]\n",
     "\n",
-    "new_ids = pd.read_csv(\"data/new_point_ids.csv\")\n",
+    "new_ids = pd.read_csv(\"../data/new_point_ids.csv\")\n",
     "\n",
-    "data = pd.read_csv(\"data/data.csv\")\n",
+    "data = pd.read_csv(\"../data/data.csv\")\n",
     "                  \n",
-    "r = pd.read_csv(\"data/R.csv\")#DB5[DB5.id.isin(new_ids.id.values)] #reintroduce dataset"
+    "r = pd.read_csv(\"../data/R.csv\")#DB5[DB5.id.isin(new_ids.id.values)] #reintroduce dataset"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baselie = pd.read_csv(\"data/baseline_regression_values.csv\")"
+    "baselie = pd.read_csv(\"../data/baseline_regression_values.csv\")"
    ]
   },
   {
