--- a/First_Part/Regression_Diagnostics_numpy.ipynb
+++ b/First_Part/Regression_Diagnostics_numpy.ipynb
@@ -51,18 +51,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB2P8 = pd.read_csv(\"data/DB2P8.csv\")\n",
-    "DB5 = pd.read_csv(\"data/DB5.csv\")\n",
+    "DB2P8 = pd.read_csv(\"../data/DB2P8.csv\")\n",
+    "DB5 = pd.read_csv(\"../data/DB5.csv\")\n",
     "\n",
     "DB2P8 = DB2P8[DB5.columns]\n",
     "\n",
     "# How was this chosen? Is this a form of removing outliers or noise to the new regression?\n",
     "# Why not simply use the whole DB5?\n",
-    "new_ids = pd.read_csv(\"data/new_point_ids.csv\")\n",
+    "new_ids = pd.read_csv(\"../data/new_point_ids.csv\")\n",
     "\n",
-    "data = pd.read_csv(\"data/data.csv\")\n",
+    "data = pd.read_csv(\"../data/data.csv\")\n",
     "                  \n",
-    "Re_DB5 = pd.read_csv(\"data/R.csv\")#DB5[DB5.id.isin(new_ids.id.values)] #reintroduce dataset"
+    "Re_DB5 = pd.read_csv(\"../data/R.csv\")#DB5[DB5.id.isin(new_ids.id.values)] #reintroduce dataset"
    ]
   },
   {
