--- a/Clustering/Feature_Selection_Notes/Feature_Selection_Algorithm_log_base2.ipynb
+++ b/Clustering/Feature_Selection_Notes/Feature_Selection_Algorithm_log_base2.ipynb
@@ -719,6 +719,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "c5afdb0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'IP',\n",
+       " 1: 'BT',\n",
+       " 2: 'NEL',\n",
+       " 3: 'PLTH',\n",
+       " 4: 'RGEO',\n",
+       " 5: 'KAREA',\n",
+       " 6: 'EPS',\n",
+       " 7: 'MEFF',\n",
+       " 8: 'TAUTH',\n",
+       " 9: 'Q95',\n",
+       " 10: 'AMIN',\n",
+       " 11: 'VOL',\n",
+       " 12: 'POHM',\n",
+       " 13: 'PNBI',\n",
+       " 14: 'PICRH',\n",
+       " 15: 'PECRH',\n",
+       " 16: 'PL',\n",
+       " 17: 'PFLOSS',\n",
+       " 18: 'TAV',\n",
+       " 19: 'LCOULOMB',\n",
+       " 20: 'QCYL5',\n",
+       " 21: 'TAUBOHM',\n",
+       " 22: 'RHOSTAR',\n",
+       " 23: 'BETASTAR',\n",
+       " 24: 'NUSTAR',\n",
+       " 25: 'OMEGACYCL'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_dic"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "968c49c2",
    "metadata": {},
@@ -757,6 +803,53 @@
    ],
    "source": [
     "print(ordered_features,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6560a65d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23    1.974924e+06\n",
+       "22    1.974209e+06\n",
+       "6     1.973866e+06\n",
+       "21    1.972522e+06\n",
+       "5     1.972425e+06\n",
+       "2     1.972101e+06\n",
+       "8     1.972021e+06\n",
+       "4     1.970919e+06\n",
+       "25    1.970205e+06\n",
+       "9     1.969055e+06\n",
+       "18    1.969033e+06\n",
+       "7     1.968664e+06\n",
+       "10    1.968569e+06\n",
+       "20    1.968472e+06\n",
+       "0     1.967243e+06\n",
+       "3     1.966910e+06\n",
+       "14    1.966706e+06\n",
+       "16    1.966596e+06\n",
+       "11    1.965748e+06\n",
+       "24    1.965559e+06\n",
+       "13    1.965559e+06\n",
+       "19    1.959197e+06\n",
+       "1     1.958611e+06\n",
+       "12    1.956777e+06\n",
+       "15    1.955489e+06\n",
+       "17    1.953900e+06\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_ranked_entropy"
    ]
   },
   {
