analyses for presentation

--- a/Classification/GP.ipynb
+++ b/Classification/GP.ipynb
@@ -54,7 +54,10 @@
    ],
    "source": [
     "# Obtained from Optimization\n",
-    "min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.6357.csv\")\n",
+    "#min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.9998.csv\")\n",
+    "min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.6357.csv\") # smallest subset --> 1459\n",
+    "\n",
+    "# min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.6357.csv\") # best recall\n",
     "\n",
     "DB2P8 = pd.read_csv(path+\"DB2P8.csv\")\n",
     "DB5 = pd.read_csv(path+\"DB5.csv\")\n",
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "69ae218d",
    "metadata": {},
    "outputs": [
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "8316a0e9",
    "metadata": {},
    "outputs": [],
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "a5a3329d",
    "metadata": {},
    "outputs": [
@@ -314,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "3fef2765",
    "metadata": {},
    "outputs": [
@@ -327,7 +330,7 @@
        " array([ 440, 1436]))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "e02b73c1",
    "metadata": {},
    "outputs": [
@@ -471,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "fd185acd",
    "metadata": {},
    "outputs": [],
@@ -483,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "d66e06c2",
    "metadata": {},
    "outputs": [],
@@ -503,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "99c92fa2",
    "metadata": {},
    "outputs": [
@@ -536,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "640d858a",
    "metadata": {},
    "outputs": [
@@ -549,7 +552,7 @@
        " array([ 440, 1432]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
