--- a/Classification/Random_Forest.ipynb
+++ b/Classification/Random_Forest.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b09db631",
    "metadata": {},
    "outputs": [
@@ -54,6 +54,9 @@
    ],
    "source": [
     "# Obtained from Optimization\n",
+    "#min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.9998.csv\")\n",
+    "#min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.6379.csv\")\n",
+    "\n",
     "min_subset_ids = pd.read_csv(path+\"R_ids_alpha_0.6357.csv\")\n",
     "\n",
     "DB2P8 = pd.read_csv(path+\"DB2P8.csv\")\n",
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f5b05707",
    "metadata": {},
    "outputs": [
@@ -99,7 +102,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4b677f25",
    "metadata": {},
    "outputs": [
@@ -133,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b29cd8a3",
    "metadata": {},
    "outputs": [],
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bbd048c7",
    "metadata": {},
    "outputs": [
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "03780f31",
    "metadata": {},
    "outputs": [
@@ -205,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "67775ffb",
    "metadata": {},
    "outputs": [
@@ -218,7 +221,7 @@
        " array([ 440, 1436]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f0d6b8b8",
    "metadata": {},
    "outputs": [
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fb7706f7",
    "metadata": {},
    "outputs": [],
@@ -273,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fb4f4872",
    "metadata": {},
    "outputs": [
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ed52da08",
    "metadata": {},
    "outputs": [
@@ -317,7 +320,7 @@
        " array([ 440, 1436]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "cd2d96e9",
    "metadata": {},
    "outputs": [
@@ -352,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "bdb609ee",
    "metadata": {},
    "outputs": [],
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "2f793027",
    "metadata": {},
    "outputs": [
@@ -405,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "f0aa30d7",
    "metadata": {},
    "outputs": [
@@ -418,7 +421,7 @@
        " array([ 440, 1436]))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "8427c7aa",
    "metadata": {},
    "outputs": [],
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "7bf1d667",
    "metadata": {},
    "outputs": [],
@@ -464,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "d415039f",
    "metadata": {},
    "outputs": [
@@ -825,7 +828,7 @@
        "[6237 rows x 21 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "ae9e1862",
    "metadata": {},
    "outputs": [],
@@ -856,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "6e1e2355",
    "metadata": {},
    "outputs": [
@@ -889,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "id": "9196d08f",
    "metadata": {},
    "outputs": [
@@ -902,7 +905,7 @@
        " array([ 440, 1432]))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,8 +917,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "75618671",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1466"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(min_subset_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75c07e3f",
    "metadata": {},
    "outputs": [],
    "source": []
