improved entropy analysis and classification with new subset

--- a/Data Analysis to Results/Optimization Subsets.ipynb
+++ b/Data Analysis to Results/Optimization Subsets.ipynb
@@ -197,23 +197,25 @@
     "    for string in search_strings:\n",
     "        count = df[df['ids'].str.contains(string, na=False)].shape[0]\n",
     "        string_counts[string] += count\n",
+    "        \n",
+    "df_ = pd.DataFrame([string_counts.keys(), string_counts.values()]).T.rename(columns={0:\"id\", 1:\"frequency\"})\n",
+    "#df_.to_csv(path+\"id_vs_frequency_decreasing_ds.csv\", index=False)\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "6c2f8f56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.DataFrame([string_counts.keys(), string_counts.values()]).T.rename(columns={0:\"id\", 1:\"frequency\"})\n",
-    "#df_.to_csv(path+\"id_vs_frequency_decreasing_ds.csv\", index=False)"
+    "df_ = pd.read_csv(path + \"id_vs_frequency_decreasing_ds.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "a4db829f",
    "metadata": {},
    "outputs": [
@@ -222,15 +224,15 @@
       "text/plain": [
        "array([8297, 8302, 8320, 8288, 8251, 8312, 8292, 8305, 8298, 8331, 8290,\n",
        "       8313, 8314, 8285, 8303, 8294, 8296, 8281, 8248, 8304, 8307, 8317,\n",
-       "       8283, 0, 8300, 8229, 8255, 8293, 8319, 8316, 8333, 8252, 8301,\n",
+       "       8283,    0, 8300, 8229, 8255, 8293, 8319, 8316, 8333, 8252, 8301,\n",
        "       8287, 8308, 8310, 8311, 8309, 8321, 8318, 8306, 8275, 8274, 8295,\n",
        "       8338, 8278, 8277, 8291, 8323, 8286, 8299, 8284, 8289, 8280, 8328,\n",
        "       8262, 8282, 8315, 8268, 8276, 8279, 8324, 8272, 8267, 8271, 8327,\n",
        "       8326, 8265, 8322, 8266, 8332, 8330, 8329, 8256, 8264, 8260, 8325,\n",
-       "       8258], dtype=object)"
+       "       8258])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "b9f14557",
    "metadata": {},
    "outputs": [
@@ -332,23 +334,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          id frequency\n",
-       "0     AEWB71      8297\n",
-       "1     UAAXGA      8302\n",
-       "2     53LSPJ      8320\n",
-       "3     FLO8WI      8320\n",
-       "4     TKCDLW      8297\n",
-       "...      ...       ...\n",
-       "2533  G8OILS      8312\n",
-       "2537  ST5FL8      8317\n",
-       "2538  G8PHEQ      8300\n",
-       "2539  K3O76W      8279\n",
-       "2540  ZD6MZS      8294\n",
+       "          id  frequency\n",
+       "0     AEWB71       8297\n",
+       "1     UAAXGA       8302\n",
+       "2     53LSPJ       8320\n",
+       "3     FLO8WI       8320\n",
+       "4     TKCDLW       8297\n",
+       "...      ...        ...\n",
+       "2533  G8OILS       8312\n",
+       "2537  ST5FL8       8317\n",
+       "2538  G8PHEQ       8300\n",
+       "2539  K3O76W       8279\n",
+       "2540  ZD6MZS       8294\n",
        "\n",
        "[1486 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "1007fad2",
    "metadata": {},
    "outputs": [
@@ -369,7 +371,7 @@
        "8338"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "9d5c8580",
    "metadata": {},
    "outputs": [
@@ -390,7 +392,7 @@
        "8229"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
