started to develope the code needed for physics interpretation

--- a/Data Analysis to Results/id_vs_frequency_decreasing_ds.ipynb
+++ b/Data Analysis to Results/id_vs_frequency_decreasing_ds.ipynb
@@ -28,20 +28,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "27a95ec4",
    "metadata": {},
    "outputs": [],
    "source": [
     "ids = pd.read_csv(path+\"id_vs_frequency_decreasing_ds.csv\")\n",
-    "DB5 = pd.read_csv(path+\"DB5.csv\")\n",
-    "#DB5 = pd.read_csv(path+\"SELDB5_SVD.csv\", low_memory=False)\n",
-    "#DB5 = DB5[DB5[\"PHASE\"].isin(['HGELM', 'HSELM', 'HGELMH', 'HSELMH'])]"
+    "#DB5 = pd.read_csv(path+\"DB5.csv\")\n",
+    "DB5 = pd.read_csv(path+\"SELDB5_SVD.csv\", low_memory=False)\n",
+    "DB5 = DB5[DB5[\"PHASE\"].isin(['HGELM', 'HSELM', 'HGELMH', 'HSELMH'])]\n",
+    "\n",
+    "DB2 = pd.read_csv(path+\"DB2P8.csv\")\n",
+    "\n",
+    "# There are shots missing in DB5 from DB2P8\n",
+    "missing_shots = DB2[~DB2.id.isin( DB5.id.values )].reset_index(drop=True)\n",
+    "DB5 = pd.concat([DB5, missing_shots], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "8973d9e4",
    "metadata": {},
    "outputs": [],
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "71556ca8",
    "metadata": {},
    "outputs": [
@@ -61,7 +67,7 @@
        "array(['ASDEX', 'JFT2M', 'PBXM', 'PDX', 'TCV', 'TDEV'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "cb777416",
    "metadata": {},
    "outputs": [
@@ -84,7 +90,7 @@
        "       'MAST', 'NSTX', 'START', 'TFTR'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "aeb2a63e",
    "metadata": {},
    "outputs": [],
@@ -115,17 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "dbb5c3ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6250"
+       "6252"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,8 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cae0f94d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2544"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3632110",
    "metadata": {},
    "outputs": [],
    "source": []
