--- a/Clustering/DBSCAN/DBSCAN_DB5V23.ipynb
+++ b/Clustering/DBSCAN/DBSCAN_DB5V23.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "449f841c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a2725409",
    "metadata": {},
    "outputs": [],
@@ -75,12 +75,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "21270e1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB5 = pd.read_excel(\"../../data/HDB5V2.3.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e66a2f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ASDEX', 'AUG', 'CMOD', 'COMPASS', 'D3D', 'JET', 'JFT2M', 'JT60U',\n",
+       "       'MAST', 'NSTX', 'PBXM', 'PDX', 'START', 'T10', 'TCV', 'TDEV',\n",
+       "       'TEXTOR', 'TFTR', 'TUMAN3M'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB5.TOK.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c1d833ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str_ = \"'ASDEX','AUG','CMOD','COMPASS','D3D','JET','JFT2M','JT60U,MAST','NSTX','PBXM','PDX','START','T10','TCV','TDEV,TEXTOR','TFTR','TUMAN3M'\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "de60a839",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ASDEX, AUG, CMOD, COMPASS, D3D, JET, JFT2M, JT60U, MAST, NSTX, PBXM, PDX, START, T10, TCV, TDEV, TEXTOR, TFTR, TUMAN3M'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_.replace(\"'\",\"\").replace(\",\",\", \")"
    ]
   },
   {
