--- a/Data Analysis to Results/Optimization Subsets.ipynb
+++ b/Data Analysis to Results/Optimization Subsets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9a7055cb",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0b991173",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "06cfd567",
    "metadata": {},
    "outputs": [
@@ -77,14 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "10c1f8d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB2P8 = pd.read_csv(path+\"DB2P8.csv\")\n",
-    "DB5 = pd.read_csv(path+\"DB5.csv\")\n",
-    "DB2 = DB2P8[DB5.columns] # Because DB2P8 has more columns than DB5\n",
+    "DB2 = pd.read_csv(path+\"DB2P8.csv\")\n",
+    "DB5 = pd.read_csv(path+\"SELDB5_SVD.csv\", low_memory=False)\n",
     "\n",
     "# There is two shots from DB2P8 missing in DB5\n",
     "missing_shots = DB2[~DB2.id.isin( DB5.id.values )].reset_index(drop=True)\n",
