modified to create plots for thesis report

--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -204,11 +204,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c1294ebb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ASDEX', 'AUG', 'AUGW', 'CMOD', 'COMPASS', 'D3D', 'JET', 'JETILW',\n",
+       "       'JFT2M', 'JT60U', 'MAST', 'NSTX', 'PBXM', 'PDX', 'START', 'TCV',\n",
+       "       'TDEV', 'TFTR'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB5.TOK.unique()"
+   ]
   },
   {
    "cell_type": "code",
