improved Entropy analysis

--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "9ae01609",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,10 @@
     "power = [\"PLTH\",\"PFLOSS\"]\n",
     "temperatures = [\"TAV\",\"TEV\",\"TIV\"]\n",
     "# e-density in SOL | total due to NBI| total due to ICRH\n",
-    "fast_particles = [\"NESOL\",\"WFFORM\",\"WFICFORM\"] "
+    "fast_particles = [\"NESOL\",\"WFFORM\",\"WFICFORM\"] \n",
+    "\n",
+    "interesting_features = plasma_characteristics + TOK_characteristics + ELM + heating + \\\n",
+    "                       impurities + power + temperatures + fast_particles"
    ]
   },
   {
