progress and fixed error

--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -147,10 +147,10 @@
     "                         ] \n",
     "TOK_characteristics = [\"TOK\",\"DIVNAME\",\"WALMAT\",\"DIVMAT\",\"LIMMAT\"]\n",
     "ELM = [\"ELMTYPE\",\"ELMFREQ\"]\n",
-    "heating = [\"PECRH\", \"PICRH\", \"ICSCHEME\",\"AUXHEAT\"]\n",
-    "impurities = [\"EVAP\",\"ZEFF\",\"ZEFFNEO\",\"PRAD\",\"POHM\",\"ENBI\"]\n",
+    "heating = [\"PECRH\", \"PICRH\", \"ICSCHEME\",\"AUXHEAT\",\"ENBI\"]\n",
+    "impurities = [\"EVAP\",\"ZEFF\",\"ZEFFNEO\",\"PRAD\",]\n",
     " # corrections on power loss | NBI Power lost by unconfined orbits\n",
-    "power = [\"PLTH\",\"PFLOSS\"]\n",
+    "power = [\"PLTH\",\"PFLOSS\",\"POHM\"]\n",
     "temperatures = [\"TAV\",\"TEV\",\"TIV\"]\n",
     "# e-density in SOL | total due to NBI| total due to ICRH\n",
     "fast_particles = [\"NESOL\",\"WFFORM\",\"WFICFORM\"] \n",
