--- a/Data Analysis to Results/STDB5 and IDs.ipynb
+++ b/Data Analysis to Results/STDB5 and IDs.ipynb
@@ -5691,8 +5691,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f706610f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Brief Lectures On Quantum Computation'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"BRIEF LECTURES ON QUANTUM COMPUTATION\".title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b07f9b04",
    "metadata": {},
    "outputs": [],
    "source": []
