--- a/Optimization/Diagnostics/Regression_Analysis_for_Decreased_DB5.ipynb
+++ b/Optimization/Diagnostics/Regression_Analysis_for_Decreased_DB5.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b21783bd",
+   "execution_count": 1,
+   "id": "5122e1fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "3c782b67",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d4c47807",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8ff7f5a2",
    "metadata": {},
    "outputs": [],
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ac4d61d0",
+   "execution_count": 5,
+   "id": "6e548320",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "[2544 rows x 239 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "5dbd17e3",
    "metadata": {},
    "outputs": [
@@ -483,10 +483,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7863.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 13 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Fri, 14 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:34:19</td>     <th>  Log-Likelihood:    </th> <td>  645.21</td>\n",
+       "  <th>Time:</th>                 <td>00:25:29</td>     <th>  Log-Likelihood:    </th> <td>  645.21</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3854</td>      <th>  AIC:               </th> <td>  -1272.</td>\n",
@@ -556,8 +556,8 @@
        "Dep. Variable:                      y   R-squared:                       0.942\n",
        "Model:                            OLS   Adj. R-squared:                  0.942\n",
        "Method:                 Least Squares   F-statistic:                     7863.\n",
-       "Date:                Thu, 13 Apr 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        23:34:19   Log-Likelihood:                 645.21\n",
+       "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        00:25:29   Log-Likelihood:                 645.21\n",
        "No. Observations:                3854   AIC:                            -1272.\n",
        "Df Residuals:                    3845   BIC:                            -1216.\n",
        "Df Model:                           8                                         \n",
@@ -586,7 +586,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "276b7740",
    "metadata": {},
    "outputs": [],
@@ -611,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "73d74de2",
+   "execution_count": 8,
+   "id": "2d229a5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "111fa435",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
     "plt.scatter(list(range( len(R)+len(DB2) )), DBβ_αR.values, s=11, c=\"r\")\n",
     "plt.axhline(dfbeta_cutoff, c=\"k\", ls=\"--\", label=\"DF-$\\\\beta$ cutoff\")\n",
     "plt.axhline(-dfbeta_cutoff, c=\"k\", ls=\"--\")\n",
-    "plt.axvline( data[len(DB2P8):].iloc[0].name, c=\"k\", ls=\":\", label=\"New Observations\")\n",
+    "plt.axvline( data[len(DB2):].iloc[0].name, c=\"k\", ls=\":\", label=\"New Observations\")\n",
     "plt.xlabel(\"Observation Index\",fontsize=20)\n",
     "plt.ylabel(\"DFBETA $\\\\alpha_R$\",fontsize=20)\n",
     "\n",
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "678abb8c",
    "metadata": {},
    "outputs": [],
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "6ed946c2",
    "metadata": {},
    "outputs": [
@@ -724,10 +724,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   3453.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 13 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Fri, 14 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:37:00</td>     <th>  Log-Likelihood:    </th> <td>  168.30</td>\n",
+       "  <th>Time:</th>                 <td>00:26:05</td>     <th>  Log-Likelihood:    </th> <td>  168.30</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1499</td>      <th>  AIC:               </th> <td>  -318.6</td>\n",
@@ -797,8 +797,8 @@
        "Dep. Variable:                      y   R-squared:                       0.949\n",
        "Model:                            OLS   Adj. R-squared:                  0.949\n",
        "Method:                 Least Squares   F-statistic:                     3453.\n",
-       "Date:                Thu, 13 Apr 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        23:37:00   Log-Likelihood:                 168.30\n",
+       "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        00:26:05   Log-Likelihood:                 168.30\n",
        "No. Observations:                1499   AIC:                            -318.6\n",
        "Df Residuals:                    1490   BIC:                            -270.8\n",
        "Df Model:                           8                                         \n",
@@ -827,7 +827,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,9 +842,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "aca69419",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -861,10 +863,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   8846.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 13 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Fri, 14 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:37:03</td>     <th>  Log-Likelihood:    </th> <td>  968.83</td>\n",
+       "  <th>Time:</th>                 <td>00:26:05</td>     <th>  Log-Likelihood:    </th> <td>  968.83</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3665</td>      <th>  AIC:               </th> <td>  -1920.</td>\n",
@@ -934,8 +936,8 @@
        "Dep. Variable:                      y   R-squared:                       0.951\n",
        "Model:                            OLS   Adj. R-squared:                  0.951\n",
        "Method:                 Least Squares   F-statistic:                     8846.\n",
-       "Date:                Thu, 13 Apr 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        23:37:03   Log-Likelihood:                 968.83\n",
+       "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        00:26:05   Log-Likelihood:                 968.83\n",
        "No. Observations:                3665   AIC:                            -1920.\n",
        "Df Residuals:                    3656   BIC:                            -1864.\n",
        "Df Model:                           8                                         \n",
@@ -964,7 +966,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "2507a44a",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1278,7 @@
        "[3854 rows x 15 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "3ed826dd",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "13d7beb3",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "51f84172",
    "metadata": {},
    "outputs": [
@@ -1365,10 +1367,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   5437.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 13 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Fri, 14 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:37:54</td>     <th>  Log-Likelihood:    </th> <td>  533.16</td>\n",
+       "  <th>Time:</th>                 <td>00:26:07</td>     <th>  Log-Likelihood:    </th> <td>  533.16</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1435</td>      <th>  AIC:               </th> <td>  -1048.</td>\n",
@@ -1438,8 +1440,8 @@
        "Dep. Variable:                      y   R-squared:                       0.968\n",
        "Model:                            OLS   Adj. R-squared:                  0.968\n",
        "Method:                 Least Squares   F-statistic:                     5437.\n",
-       "Date:                Thu, 13 Apr 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        23:37:54   Log-Likelihood:                 533.16\n",
+       "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        00:26:07   Log-Likelihood:                 533.16\n",
        "No. Observations:                1435   AIC:                            -1048.\n",
        "Df Residuals:                    1426   BIC:                            -1001.\n",
        "Df Model:                           8                                         \n",
@@ -1468,7 +1470,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "39903705",
    "metadata": {
     "scrolled": false
@@ -1505,10 +1507,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7785.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 13 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Fri, 14 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:37:56</td>     <th>  Log-Likelihood:    </th> <td>  689.57</td>\n",
+       "  <th>Time:</th>                 <td>00:26:09</td>     <th>  Log-Likelihood:    </th> <td>  689.57</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3729</td>      <th>  AIC:               </th> <td>  -1361.</td>\n",
@@ -1578,8 +1580,8 @@
        "Dep. Variable:                      y   R-squared:                       0.944\n",
        "Model:                            OLS   Adj. R-squared:                  0.944\n",
        "Method:                 Least Squares   F-statistic:                     7785.\n",
-       "Date:                Thu, 13 Apr 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        23:37:56   Log-Likelihood:                 689.57\n",
+       "Date:                Fri, 14 Apr 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        00:26:09   Log-Likelihood:                 689.57\n",
        "No. Observations:                3729   AIC:                            -1361.\n",
        "Df Residuals:                    3720   BIC:                            -1305.\n",
        "Df Model:                           8                                         \n",
@@ -1608,7 +1610,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,71 +1626,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "8c16ec88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #points: αR: cutoff t residual  --- 0.9153\n",
-    "\"\"\"\n",
-    "1251: 0.9153: st = 1: leverage = *1\n",
-    "1251: 0.9153: st = 0.8: leverage = *1\n",
-    "1251: 0.9153: st = 0.8: leverage = *0.5\n",
-    "1251: 0.9160: st = 0.5: leverage = *0.5\n",
-    "\"\"\"; "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "ce94aab9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1245"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(R_not_infl) # points that gave 0.9576 from previous analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "ff721e55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#R_not_infl[[\"id\"]].to_csv(\"../data/R_ids_alpha_0.9153.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "0fa31844",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac4c5e43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34c5d006",
+   "id": "92ce841c",
    "metadata": {},
    "outputs": [],
    "source": []
