--- a/Classification/cuML_RF_categorical_data.ipynb
+++ b/Classification/cuML_RF_categorical_data.ipynb
@@ -13,10 +13,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d4786c09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "4f834bdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cudf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msm\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpatches\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmpatches\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcudf\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcuml\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mensemble\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomForestClassifier\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcuml\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split, GridSearchCV, StratifiedKFold\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cudf'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
@@ -25,17 +45,39 @@
     "import statsmodels.api as sm\n",
     "import matplotlib.patches as mpatches\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "import cudf\n",
+    "\n",
+    "\n",
+    "from cuml.ensemble import RandomForestClassifier\n",
+    "from cuml.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
+    "\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
     "from sklearn.metrics import precision_recall_curve, precision_recall_fscore_support\n",
     "\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "path = \"../data/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "93c9d30e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: conda: command not found\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! conda list"
    ]
   },
   {
@@ -202,13 +244,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "033329be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75145996",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "369a59dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "9b7052ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data.drop(\"label\", axis=1)\n",
-    "y = data[\"label\"]\n",
+    "X = cudf.from_pandas(data.drop(\"label\", axis=1))\n",
+    "y = cudf.from_pandas(data[\"label\"])\n",
     "\n",
     "# Identify categorical and numerical features\n",
     "cat_features = X.select_dtypes(include=[\"object\"]).columns.tolist()\n",
